Fix marker cluster bug on production

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -19,7 +19,7 @@
 
         <link href='//fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css' />
         <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
-        <script src='/js/markerclusterer.js'></script>
+        <script src='/markerclusterer.js'></script>
         <script data-main="/js/main.js" src="/application.js"></script>
     </body>
 </html>
